# LichtFeld-Studio

./: .gitmodules  CMakeLists.txt  PLAN_TETRA_FIX.md  STATUS_TETRA_FIX.md  TETRA_COMPARISON.md  vcpkg.json
.github/workflows/: windows.yml
docs/: G3S_IMPLEMENTATION_PLAN.md
docs/plugins/: api-reference.md
docs/plugins/examples/: README.md
src/app/: application.cpp  main.cpp  mcp_gui_tools.cpp  splash_screen.cpp
src/core/: argument_parser.cpp  camera.cpp  image_io.cpp  parameters.cpp  path_utils.hpp
src/core/tensor/: tensor.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_masking_ops.cpp  tensor_movement_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp
src/io/: cache_image_loader.cpp  pipelined_image_loader.cpp
src/io/formats/: colmap.cpp  ply.cpp  usd.cpp
src/io/loaders/: blender_loader.cpp
src/loader/formats/: colmap.cpp
src/python/lfs/: module.cpp  notification_bridge.cpp  py_io.cpp  py_params.cpp  py_rendering.cpp  py_scene.cpp  py_tensor.cpp  py_ui.cpp  py_ui_menus.cpp  rml_im_mode_panel_adapter.cpp  rml_python_panel_adapter.cpp
src/python/lfs_plugins/: __init__.py  edit_menu.py  getting_started_panel.py  help_menu.py  histogram_panel.py  image_preview_panel.py  panels.py  plugin_marketplace_panel.py  rendering_panel.py  scene_panel.py  sequencer_panel.py  templates.py  toolbar.py  tools_menu.py  training_panel.py  transform_controls.py  view_menu.py
src/rendering/: axes_renderer.cpp  gs_rasterizer_tensor.cpp  point_cloud_renderer.cpp  rendering_engine_impl.cpp  rendering_pipeline.cpp  rendering_pipeline.hpp  screen_renderer.cpp  split_view_renderer.cpp
src/sequencer/: keyframe.hpp  timeline.cpp  timeline.hpp
src/tetra/: CMakeLists.txt  tetra_delaunay.cpp  tetra_features.cpp  tetra_mesh.cpp  tetra_optimizer.cpp  tetra_renderer.cpp  tetra_trainer.cpp
src/tetra/cuda/: hash_grid.cu  mlp_kernels.cu  tetra_intersect.cu  tetra_rasterize.cu  tetra_rays.cu  tetra_tile_sort.cu
src/tetra/include/tetra/: tetra_delaunay.hpp  tetra_features.hpp  tetra_mesh.hpp  tetra_optimizer.hpp  tetra_renderer.hpp  tetra_trainer.hpp
src/training/: CMakeLists.txt  camera_interpolation.cpp  camera_interpolation.hpp  checkpoint.cpp  dataset.hpp  trainer.cpp  trainer.hpp  training_setup.cpp  video_renderer.cpp  video_renderer.hpp
src/training/kernels/: bilateral_grid_tv.cu  depth_loss.cu  g3s_median_depth.cu  g3s_median_depth_backward.cu  g3s_transmittance.cu  g3s_vacancy.cu  lfs_kernels.cu  (+2 more)
src/visualizer/: CMakeLists.txt  visualizer_impl.cpp  visualizer_impl.hpp
tests/: CMakeLists.txt  test_bool_any_all.cpp  test_checkpoint_resume.cpp  test_gsplat_rasterizer.cpp  test_input_controller_dataset_load.cpp  test_input_controller_focus.cpp  test_lfs_strategy.cpp  test_parameter_manager.cpp  test_python_integration.cpp  test_python_io.cpp  test_rendering_refactor_services.cpp  test_rml_path_utils.cpp  test_rotated_sh_correctness.cpp  test_sequencer_regressions.cpp  test_slice_mm_bug.cpp  test_stride_bugs.cpp  test_undistort.cpp  test_viewport.cpp
tests/python/: test_histogram_panel.py  test_io_save.py  test_pano_coordinate_regressions.py  test_plugin_api_surface.py  test_plugin_docs.py  test_plugin_marketplace_panel.py  test_rendering_panel_localization_regressions.py  test_rendering_panel_regressions.py  test_rmlui_image_sources.py  test_training_panel_regressions.py
(+198 files in other folders)
